--- a/index.html
+++ b/index.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <header>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <!-- styles -->
+    <link rel="stylesheet" href="./style.css" />
+  </header>
+  <body>
+    <main>
+      <div class="container">
+        <section class="card">
+          <h1 class="title">Join our community</h1>
+          <h2 class="conduct">30-day, hassle-free money back guarantee</h2>
+          <p>
+            Gain access to our full library of tutorials along width expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </p>
+        </section>
+        <section class="card">
+          <h2 class="title-secondary">Monthly Subscription</h2>
+          <p class="price">
+            <strong class="strong">$29</strong
+            ><span class="weaken">per month</span>
+          </p>
+          <p>full access for less than $1 a day</p>
+          <button class="btn">Sign Up</button>
+        </section>
+        <section class="card">
+          <h2 class="title-secondary">Why Us</h2>
+          <p class="reason">
+            Tutorials by industry experts Peer & expert code review Coding
+            exercises Access to our Github repos Community forum Flashcard decks
+            New videos every week
+          </p>
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
