--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <header>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>single-price-grid-component</title>
     <!-- styles -->
     <link rel="stylesheet" href="./style.css" />
-  </header>
+  </head>
   <body>
     <main>
       <div class="container">
